iNcDB.css
@font-face{
	font-family: 'Antic', sans-serif;
	font-family: 'Titillium Web', sans-serif;
}

@font-face{
	font-family: Gill Sans Light;
	src: url('GillSans.ttc');;
}

h3{
	padding-top: 100px;
	margin: 0;
}

.starter-template {
  /*padding: 40px 0px;*/
  text-align: center;
}

.navbar-inverse{
	background-color: #2c3e50;
	font-size: 1.5em;
}

.navbar{
	font-family: Titillium Web;
	font-weight: 200;
}


.footer{
	background-color: #34495e;
	width: 100%;
	height: 50px;
	margin-top:40px;
}

.footer_content{
	padding-top:10px;
}

.blank_banner{
	background-color: #34495e;
	width: 100%;
	height: auto;
}

#banner{
	background-image: url(images/banner.jpg);
	background-repeat: no-repeat;
	background-position: 0 0;
	background-size: cover;
	width: 100%;
	height: 50vh;
}

#heading{
	margin: 0;
	font-size: 4vw;
}

#search_Box{
	position: relative;
	display: inline-block;
	width: 60%;
}

.btn-primary{
	font-family: Titillium Web;
}

.form-control{
	position: relative;
	display: inline-block;
	white-space: nowrap;
	font-family: Titillium Web;
	font-weight: 400;
}

.header{
	font-family: Titillium Web;
	font-weight: 400;
	text-align: center;
	color: #ecf0f1;
}

.body_content{
	margin-left: 10vw;
	margin-right: 10vw;
	margin-bottom: 20px;
	width: 80%;
	height: auto;
}

.team{
	width: 33%;
	height: 100%;
	position: relative;
	display: inline-block;
	font-family: Titillium Web;
	font-size: 2em;
	font-weight: 200;
	text-align: center;
}

#team_container{
	white-space: nowrap;
}

.title_banner{
	font-family: Titillium Web;
	font-weight: 400;
	text-align: center;
	color: #ecf0f1;
	margin-top: 0;
	padding-top: 3vh;
}

.sub_banner{
	font-family: Titillium Web;
	font-weight: 400;
	text-align: center;
	color: #ecf0f1;
	margin-top: 0;
	padding-top: 2vh;
}

.brain_scans{
	padding-top: 20px;
	padding-bottom: 20px;
	padding-left: 10%;
	padding-right: 10%;
	width: 100%;
	height: 100%;
	text-align: center;
	display: inline-block;
}

.brain_section{
	width:33%;
	float: left;
}

.brain_image{
	height: auto;
	width: 20vw;
	margin-bottom: 20px;
}

.title_body{
	padding-top: 2vh;
	padding-bottom: 2vh;
	font-family: Titillium Web;
	font-size: 4vh;
	font-weight: 400;
}

.name{
	font-size: 2vw;
}
.sub_title{
	font-family: Titillium Web;
	font-size: 1.5vw;
}

.body_text{
	font-family: Titillium Web;
	font-size: 2.5vh;
	font-weight: 400;
	line-height: 1.5;
	padding-top: 30px;
}

.dp{
	width: 15vw;
	height: 15vw;
}

.description{
	padding-top: 1vh;
	font-family: Titillium Web;
	font-size: 0.6em;
}

table{
	font-family: Titillium Web;
	font-weight: 200;
	font-size: 20px;
}

